tests-integration/fixtures/checking/136_derive_nested_higher_kinded/Main.snap
---
source: tests-integration/tests/checking/generated.rs
assertion_line: 28
expression: report
---
Terms
T ::
  forall (t4 :: Type) (f :: (t4 :: Type) -> Type) (g :: Type -> (t4 :: Type)).
    (f :: (t4 :: Type) -> Type) ((g :: Type -> (t4 :: Type)) Int) ->
    T (f :: (t4 :: Type) -> Type) (g :: Type -> (t4 :: Type))
Nothing :: forall (a :: Type). Maybe (a :: Type)
Just :: forall (a :: Type). (a :: Type) -> Maybe (a :: Type)
U :: forall (f :: Type -> Type). (f :: Type -> Type) (Maybe Int) -> U (f :: Type -> Type)
V ::
  forall (t20 :: Type) (f :: (t20 :: Type) -> Type) (g :: Int -> (t20 :: Type)).
    (f :: (t20 :: Type) -> Type) ((g :: Int -> (t20 :: Type)) 42) ->
    V (f :: (t20 :: Type) -> Type) (g :: Int -> (t20 :: Type))

Types
T :: forall (t4 :: Type). ((t4 :: Type) -> Type) -> (Type -> (t4 :: Type)) -> Type
Maybe :: Type -> Type
U :: (Type -> Type) -> Type
V :: forall (t20 :: Type). ((t20 :: Type) -> Type) -> (Int -> (t20 :: Type)) -> Type

Data
T
  Quantified = :1
  Kind = :0

Maybe
  Quantified = :0
  Kind = :0

U
  Quantified = :0
  Kind = :0

V
  Quantified = :1
  Kind = :0


Roles
T = [Representational, Representational]
Maybe = [Representational]
U = [Representational]
V = [Representational, Representational]

Derived
derive Eq1 (&0 :: Type -> Type) => Eq (V @Type (&0 :: Type -> Type) (&1 :: Int -> Type) :: Type)
derive Ord1 (&0 :: Type -> Type) => Ord (V @Type (&0 :: Type -> Type) (&1 :: Int -> Type) :: Type)
derive Eq1 (&0 :: Type -> Type) => Eq (T @Type (&0 :: Type -> Type) (&1 :: Type -> Type) :: Type)
derive Ord1 (&0 :: Type -> Type) => Ord (T @Type (&0 :: Type -> Type) (&1 :: Type -> Type) :: Type)
derive Eq (&0 :: Type) => Eq (Maybe (&0 :: Type) :: Type)
derive Ord (&0 :: Type) => Ord (Maybe (&0 :: Type) :: Type)
derive Eq1 (&0 :: Type -> Type) => Eq (U (&0 :: Type -> Type) :: Type)
derive Ord1 (&0 :: Type -> Type) => Ord (U (&0 :: Type -> Type) :: Type)

Diagnostics
error[NoInstanceFound]: No instance found for: Eq ((&1 :: Type -> Type) Int)
  --> 8:1..8:38
  |
8 | derive instance (Eq1 f) => Eq (T f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord ((&1 :: Type -> Type) Int)
  --> 9:1..9:40
  |
9 | derive instance (Ord1 f) => Ord (T f g)
  | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Eq ((&1 :: Int -> Type) 42)
  --> 23:1..23:38
   |
23 | derive instance (Eq1 f) => Eq (V f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error[NoInstanceFound]: No instance found for: Ord ((&1 :: Int -> Type) 42)
  --> 24:1..24:40
   |
24 | derive instance (Ord1 f) => Ord (V f g)
   | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
